--- a/frontend/src/components/Result/Styling.css
+++ b/frontend/src/components/Result/Styling.css
@@ -21,22 +21,127 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 500px;
+  height: 500px;
+  border: 3px solid #000000;
+  border-radius: 6px;
 }
+.image-button {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
 
 .button-container {
   position: relative;
-  margin: 40px;
+  margin: 45px;
 }
-
-
-.info-box {
-  width: 400px;
+/*  top: -100px;
+  left: -700px;*/
+.Styling-info-box {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 1000px;
   position: absolute;
-  top: 100%;
-  right: 1;
+  left: 200px;
+  top: 200px;
   background-color: #f9f9f9;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   z-index: 3;
+}
+
+.Styling-info-item {
+  display: flex;
+  width: 480px;
+  height: 300px;
+  border-top:1px solid #dcdcdc; 
+   border-bottom: 1px solid #dcdcdc;
+}
+
+.Styling-info-item-img {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000000;
+}
+
+.Styling-info-pricebrand {
+  display: flex;
+  width: 300px;
+  height: 50px;
+  border-top:1px solid #dcdcdc; 
+  border-bottom: 1px solid #dcdcdc; 
+  align-items: center;
+}
+
+.Styling-info-detail {
+  display: flex;
+  flex-direction: column;
+}
+
+.Styling-info-detail2 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+
+.Styling-info-detail3 {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-left: 5px;
+}
+
+.Styling-info-rink{
+  display: flex;
+  margin-right: 2px;
+}
+
+.Styling-info-detail-name {
+  display: flex;
+  width: 475px;
+  height: 75px;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.Styling-info-item-button {
+  display: flex;
+  width: 52px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  border: 0px;
+  background-color: #ffffff;
+}
+
+.Styling-info-item-input {
+  display: flex;
+  width: 50px;
+  height: 50px;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"] + label {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  line-height: 22px;
+  padding-left: 22px;
+  background-image: url("../../../public/img/t10check.png");
+}
+
+input[type="checkbox"]:checked + label {
+  background-image: url("../../../public/img/t10checklater.png");
+  width: 52px;
+  height: 50px;
 }
