--- a/frontend/src/pages/Result.css
+++ b/frontend/src/pages/Result.css
@@ -1,21 +1,18 @@
 .page-content {
     padding-top: 70px; 
+    width: 600px;
+    height: 1000px;
     display: flex;
     justify-content: center;
+    /*border: 3px solid #295fb7;*/
     flex-wrap: wrap;
 }
 
-.left-section {
-    flex: 1;
-    max-width: 300px; 
-    flex-basis: 300px; 
-    padding-right: 20px; 
-}
-
 .center-section {
-    flex: 2;
-    max-width: 600px; 
-    flex-basis: 600px; 
+    display: flex;
+    border-radius: 6px;
+    width: 500px; 
+    height: 500px;
     
 }
 
@@ -27,9 +24,46 @@
 }
 
 .bottom-section {
-    flex: 100%;
-    max-width: 100%; 
-    padding-top: 20px; 
-    display: flex; 
+    display: flex;
+    width: 500px; 
+    height: 400px;
     justify-content: center; 
+    border: 3px solid #010000;
+    border-radius: 6px;
+}
+
+.page-content-left{
+    display: flex;
+    width: 300px;
+    height: 500px;
+    /*border: 3px solid #295fb7;*/
+    margin-right: 50px;
+}
+
+.page-content-right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: 800px;
+    border: 0px solid #295fb7;
+    margin-left: 0px;
+    gap: 5rem;
+}
+
+.page-top{
+    padding-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imga{
+    display: flex;
+    position: absolute;
+    z-index: 0;
+    top: 200px;
+    left: 870px;
+    width: 200px;
+    height: 400px;
 }
